unpackaged/main/default/objects/fferpcore__BillingDocumentLineItem__c/fields/fferpcore__Account__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce account representing the location the product is shipped to. The account must be a descendant of the related billing document account and contain complete address details. Descendants up to five relationships deep in the hierarchy are valid.</description>
    <inlineHelpText>Salesforce account representing the location the product is shipped to. The account must be a descendant of the related billing document account and contain complete address details. Descendants up to five relationships deep in the hierarchy are valid.</inlineHelpText>
    <label>Shipping Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Parent.Id</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Billing Document Line Items</relationshipLabel>
    <relationshipName>RelatedBillingDocumentLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>