unpackaged/main/default/objects/fferpcore__BillingDocumentLineItem__c/fields/fferpcore__BillingDocument__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__BillingDocument__c</fullName>
    <description>Billing document to which this billing document line item belongs.</description>
    <inlineHelpText>Billing document to which this billing document line item belongs.</inlineHelpText>
    <label>Billing Document</label>
    <referenceTo>fferpcore__BillingDocument__c</referenceTo>
    <relationshipLabel>Billing Document Line Items</relationshipLabel>
    <relationshipName>ChildBillingDocumentLineItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>