unpackaged/main/default/objects/fferpcore__BillingDocumentLineItem__c/fields/fferpcore__BillingDocumentExternalTaxStatus__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__BillingDocumentExternalTaxStatus__c</fullName>
    <description>Formula field containing the external tax status of the billing document to which the billing document line item belongs.</description>
    <formula>TEXT(fferpcore__BillingDocument__r.fferpcore__ExternalTaxStatus__c)</formula>
    <inlineHelpText>External Tax Status of the billing document to which this billing document line item belongs.</inlineHelpText>
    <label>Billing Document External Tax Status</label>
    <type>Text</type>
</CustomField>