unpackaged/main/default/objects/fferpcore__BillingDocumentLineItem__c/fields/fferpcore__BillingDocumentStatus__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__BillingDocumentStatus__c</fullName>
    <description>Formula field containing the status of the billing document to which the billing document line item belongs.</description>
    <formula>TEXT(fferpcore__BillingDocument__r.fferpcore__DocumentStatus__c)</formula>
    <inlineHelpText>Status of the billing document to which this billing document line item belongs.</inlineHelpText>
    <label>Billing Document Status</label>
    <type>Text</type>
</CustomField>