unpackaged/main/default/objects/fferpcore__BillingDocumentLineItem__c/fields/fferpcore__CompanySite__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__CompanySite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Company site representing the location the product is shipped from. The site must be a child of the related billing document company and contain complete address details.</description>
    <inlineHelpText>Company site representing the location the product is shipped from. The site must be a child of the related billing document company and contain complete address details.</inlineHelpText>
    <label>Company Site</label>
    <referenceTo>fferpcore__CompanySite__c</referenceTo>
    <relationshipLabel>Billing Document Line Items</relationshipLabel>
    <relationshipName>BillingDocumentLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>