unpackaged/main/default/objects/fferpcore__BillingDocumentLineItem__c/fields/fferpcore__InvalidCompanySite__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__InvalidCompanySite__c</fullName>
    <description>Indicates that the selected company site is not a child of the billing document company.</description>
    <formula>AND(
        fferpcore__CompanySite__c != null,
        OR(
            fferpcore__BillingDocument__r.fferpcore__Company__c = null,
            fferpcore__CompanySite__r.fferpcore__Company__c != fferpcore__BillingDocument__r.fferpcore__Company__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates that the selected company site is not a child of the billing document company.</inlineHelpText>
    <label>Invalid Company Site</label>
    <type>Checkbox</type>
</CustomField>