unpackaged/main/default/objects/fferpcore__BillingDocumentLineItem__c/fields/fferpcore__InvalidShippingAccount__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__InvalidShippingAccount__c</fullName>
    <description>Indicates that the selected shipping account is not a descendant of the billing document account.</description>
    <formula>AND(
        fferpcore__Account__c != null,
        OR(
            fferpcore__BillingDocument__r.fferpcore__Account__c = null,
            AND(
                fferpcore__Account__r.ParentId != fferpcore__BillingDocument__r.fferpcore__Account__c,
                fferpcore__Account__r.Parent.ParentId != fferpcore__BillingDocument__r.fferpcore__Account__c,
                fferpcore__Account__r.Parent.Parent.ParentId != fferpcore__BillingDocument__r.fferpcore__Account__c,
                fferpcore__Account__r.Parent.Parent.Parent.ParentId != fferpcore__BillingDocument__r.fferpcore__Account__c,
                fferpcore__Account__r.Parent.Parent.Parent.Parent.ParentId != fferpcore__BillingDocument__r.fferpcore__Account__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates that the selected shipping account is not a descendant of the billing document account.</inlineHelpText>
    <label>Invalid Shipping Account</label>
    <type>Checkbox</type>
</CustomField>