unpackaged/main/default/objects/fferpcore__BillingDocumentLineItem__c/fields/fferpcore__LineDescription__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__LineDescription__c</fullName>
    <description>Description of the billing document line item.</description>
    <inlineHelpText>Description of the billing document line item.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>