unpackaged/main/default/objects/fferpcore__BillingDocumentLineItem__c/fields/fferpcore__ManualAddressOverride__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ManualAddressOverride__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that you want to enter and maintain the shipping address manually. If deselected and a shipping account is specified, the account shipping address is saved to the line.</description>
    <inlineHelpText>Indicates that you want to enter and maintain the shipping address manually. If deselected and a shipping account is specified, the account shipping address is saved to the line.</inlineHelpText>
    <label>Enter Shipping Address Manually</label>
    <type>Checkbox</type>
</CustomField>