unpackaged/main/default/objects/fferpcore__BillingDocumentLineItem__c/fields/fferpcore__NetValueBeforeDiscount__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__NetValueBeforeDiscount__c</fullName>
    <description>The net value of the billing document line item before the discounts are applied.</description>
    <inlineHelpText>The net value of the billing document line item before the discounts are applied.</inlineHelpText>
    <label>Net Value Before Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>