unpackaged/main/default/objects/fferpcore__BillingDocumentLineItem__c/fields/fferpcore__ProductService__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ProductService__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Salesforce product or service to which this billing document line item relates.</description>
    <inlineHelpText>Lookup to the Salesforce product or service.</inlineHelpText>
    <label>Product or Service</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Service Relationship</relationshipLabel>
    <relationshipName>RelatedBillingDocumentLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>