unpackaged/main/default/objects/fferpcore__BillingDocumentLineItem__c/fields/fferpcore__Quantity__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Quantity__c</fullName>
    <defaultValue>1.000000</defaultValue>
    <description>Number of items included in this billing document line item. This is used to calculate the Total Value of the billing document line item.</description>
    <inlineHelpText>Number of items included in this billing document line item. This is used to calculate the Total Value of the billing document line item.</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>6</scale>
    <type>Number</type>
</CustomField>