unpackaged/main/default/objects/fferpcore__BillingDocumentLineItem__c/fields/fferpcore__ReportingNetValue__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ReportingNetValue__c</fullName>
    <description>Total Value of this billing document line item before tax based on the Document Type of the billing document. If the billing document is an invoice, the value is the same as the Net Value. If the document is a credit note, the value is calculated using the formula: Net Value * -1.</description>
    <formula>IF (ISPICKVAL(fferpcore__BillingDocument__r.fferpcore__DocumentType__c, "Credit Note"),  fferpcore__NetValue__c * -1, fferpcore__NetValue__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Value of this billing document line item before tax based on the Document Type of the billing document.</inlineHelpText>
    <label>Reporting Net Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>