unpackaged/main/default/objects/fferpcore__BillingDocumentLineItem__c/fields/fferpcore__ReportingNetValueNumber__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ReportingNetValueNumber__c</fullName>
    <description>Reporting net value, stored as a number.</description>
    <formula>fferpcore__ReportingNetValue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Net Value Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>