unpackaged/main/default/objects/fferpcore__BillingDocumentLineItem__c/fields/fferpcore__ReportingTaxValue2__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ReportingTaxValue2__c</fullName>
    <description>Tax Value 2 of the corresponding Tax Rate based on the Document Type of the billing document. If the billing document is an invoice, the value is the same as Tax Value 2. If the document is a credit note, the value is calculated using the formula: Tax Value 2 * -1.</description>
    <formula>IF (ISPICKVAL(fferpcore__BillingDocument__r.fferpcore__DocumentType__c, "Credit Note"),  fferpcore__TaxValue2__c * -1, fferpcore__TaxValue2__c)</formula>
    <inlineHelpText>Tax Value 2 of the corresponding Tax Rate based on the Document Type of the billing document.</inlineHelpText>
    <label>Reporting Tax Value 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>