unpackaged/main/default/objects/fferpcore__BillingDocumentLineItem__c/fields/fferpcore__ReportingTaxValueTotal__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ReportingTaxValueTotal__c</fullName>
    <description>Total tax for the billing document line item based on the Document Type of the billing document. If the billing document is an invoice, the value is the same as the Tax Value Total. If the document is a credit note, the value is calculated using the formula: Tax Value Total * -1.</description>
    <formula>IF (ISPICKVAL(fferpcore__BillingDocument__r.fferpcore__DocumentType__c, "Credit Note"),  fferpcore__TaxValueTotal__c * -1, fferpcore__TaxValueTotal__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total tax for the billing document line item based on the Document Type of the billing document.</inlineHelpText>
    <label>Reporting Tax Value Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>