unpackaged/main/default/objects/fferpcore__BillingDocumentLineItem__c/fields/fferpcore__ReportingTotalValue__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ReportingTotalValue__c</fullName>
    <description>Total Value of this billing document line item including tax based on the Document Type of the billing document. If the billing document is an invoice, the value is the same as the Total Value. If the document is a credit note, the value is calculated using the formula: Total Value * -1.</description>
    <formula>IF (ISPICKVAL(fferpcore__BillingDocument__r.fferpcore__DocumentType__c, "Credit Note"),  fferpcore__TotalValue__c * -1, fferpcore__TotalValue__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Value of this billing document line item including tax based on the Document Type of the billing document.</inlineHelpText>
    <label>Reporting Total Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>