unpackaged/main/default/objects/fferpcore__BillingDocumentLineItem__c/fields/fferpcore__ShippingCity__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ShippingCity__c</fullName>
    <description>Shipping address city.</description>
    <label>Shipping City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>