unpackaged/main/default/objects/fferpcore__BillingDocumentLineItem__c/fields/fferpcore__ShippingState__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ShippingState__c</fullName>
    <description>Shipping address state/province.</description>
    <label>Shipping State/Province</label>
    <length>80</length>
    <type>Text</type>
</CustomField>