unpackaged/main/default/objects/fferpcore__BillingDocumentLineItem__c/fields/fferpcore__TaxCode3__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__TaxCode3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tax code to use when calculating tax for this billing document line item.</description>
    <inlineHelpText>Tax code to use when calculating tax for this billing document line item. You can use the tax codes to represent the state, county and city tax authorities.</inlineHelpText>
    <label>Tax Code 3</label>
    <referenceTo>fferpcore__TaxCode__c</referenceTo>
    <relationshipLabel>Billing Document Line Items (Tax Code 3)</relationshipLabel>
    <relationshipName>BillingDocumentLineItemsTaxCode3</relationshipName>
    <type>Lookup</type>
</CustomField>