unpackaged/main/default/objects/fferpcore__BillingDocumentLineItem__c/fields/fferpcore__TaxRate1__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__TaxRate1__c</fullName>
    <description>Tax rate to use when calculating tax for this billing document line item.</description>
    <inlineHelpText>Tax rate to use when calculating tax for this billing document line item.</inlineHelpText>
    <label>Tax Rate 1</label>
    <precision>9</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>