unpackaged/main/default/objects/fferpcore__BillingDocumentLineItem__c/fields/fferpcore__TaxRateTotal__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__TaxRateTotal__c</fullName>
    <description>Total tax rate for the billing document line item.</description>
    <formula>fferpcore__TaxRate1__c + fferpcore__TaxRate2__c + fferpcore__TaxRate3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total tax rate for the billing document line item.</inlineHelpText>
    <label>Tax Rate Total</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>