unpackaged/main/default/objects/fferpcore__BillingDocumentLineItem__c/fields/fferpcore__TaxValue2__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__TaxValue2__c</fullName>
    <description>Tax value calculated from the corresponding tax rate using the formula: Net Value * (Tax Rate / 100).</description>
    <inlineHelpText>Tax value calculated from the corresponding tax rate using the formula: Net Value * (Tax Rate / 100).</inlineHelpText>
    <label>Tax Value 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>