unpackaged/main/default/objects/fferpcore__BillingDocumentLineItem__c/fields/fferpcore__TaxValueTotal__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__TaxValueTotal__c</fullName>
    <description>Total tax for the billing document line item.</description>
    <formula>fferpcore__TaxValue1__c + fferpcore__TaxValue2__c + fferpcore__TaxValue3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total tax for the billing document line item.</inlineHelpText>
    <label>Tax Value Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>