unpackaged/main/default/objects/fferpcore__BillingDocumentLineItem__c/listViews/fferpcore__All.listView-meta.xml
<ListView>
    <fullName>fferpcore__All</fullName>
    <columns>NAME</columns>
    <columns>fferpcore__Account__c</columns>
    <columns>fferpcore__CompanySite__c</columns>
    <columns>fferpcore__ProductService__c</columns>
    <columns>fferpcore__Quantity__c</columns>
    <columns>fferpcore__UnitPrice__c</columns>
    <columns>fferpcore__NetValue__c</columns>
    <columns>fferpcore__TaxValueTotal__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>